# lazycli

./: Cargo.toml  README.md  install.sh  test.txt
app/: Cargo.toml
app/src/: main.rs
src/: main.rs
