[package]
name = "lazycli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execute = "0.2.12"
async-openai = "0.10.3"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
